# fastapi_template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  prek.toml  pyproject.toml
alembic/: env.py
src/: main.py
src/core/: config.py  database.py  database_sync.py  mixins.py  utils.py
src/features/user/: models.py  routes.py  schemas.py  services.py
src/templates/: base.html.jinja  index.html.jinja
tests/: conftest.py
